Fix segfault in VR with Top Document Isolation on.

The touch selection controller may be null on Android for a few reasons,
one of which is that selection is disabled in VR currently.

Bug: 822374
Change-Id: Ie19fc8a4b148f64dc0fda391a45e758940d39154
Reviewed-on: https://chromium-review.googlesource.com/963680
Reviewed-by: Avi Drissman <avi@chromium.org>
Commit-Queue: Michael Thiessen <mthiesse@chromium.org>
Cr-Commit-Position: refs/heads/master@{#543726}
Former-commit-id: eb8d3afd6628cbccdd26a15161d3a7125b598f3c